[package]
name = "udp-hole"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["macros", "sync", "net", "io-std", "rt-multi-thread", "signal"] }
